<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">平行人</string>
    <string name="button_send">常用语</string>
    <string name="search_hint">搜索想要聊天的机器人</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="et_password_hint">密码(6&#8211;16位数字字母组合)</string>
    <string name="send_message">获取验证码</string>
    <string name="company_name">所有者名称:</string>
    <string name="tv_voice_login">语音登录口令:</string>
    <string name="et_company_hint">2&#8211;16位中文</string>
    <string name="et_robot_hint">最多5位中文或12位英文</string>
    <string name="et_voice_password_hint">最多20个字</string>
    <string name="tip_error_company">所有者名称格式错误</string>
    <string name="tip_error_robot">机器人名称格式错误</string>
    <string name="tv_new_password">请输入新密码!</string>
    <string name="tv_confirm_password">请再次输入密码</string>
    <string name="submit">确定</string>
    <string name="forget">忘记密码</string>
    <string name="tv_other_login">其他登录方式</string>
    <string name="tv_username">请输入您的手机号</string>
    <string name="tv_password">请输入您的密码</string>
    <string name="concern">关注</string>
    <string name="knowledge">知识库</string>
    <string name="mime_info">个人中心</string>
    <string name="concerned">已关注</string>
    <string name="ranking_list">排行榜</string>
    <string name="balance_search">余额查询</string>
    <string name="about_diting">版本更新</string>
    <string name="feedback">意见反馈</string>
    <string name="reset_password">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="company_diting">北京谛听科技有限公司</string>
    <string name="company_website">官方网址:www.ditingai.com</string>
    <string name="current_version">当前版本:</string>
    <string name="check_update">检查更新</string>
    <string name="verifycode_input">请输入验证码</string>
    <string name="add_question">添加内容</string>
    <string name="select_all">全选</string>
    <string name="tv_no_knowledge">您还没有建立您的内容库, 快去添加吧!</string>
    <string name="tv_no_concern">您还没有关注任何机器人,快去关注吧!</string>
    <string name="tv_no_mail">暂无消息</string>
    <string name="fans">粉丝数:&#160;</string>
    <string name="tv_question">问题:</string>
    <string name="tv_answer">答案:</string>
    <string name="tv_scene">场景:</string>
    <string name="tv_picture">图片:</string>
    <string name="change_photo">更换头像</string>
    <string name="tv_common_knowledge">是否启用公共知识库</string>
    <string name="tv_my_application">我的技能</string>
    <string name="my_app">公共应用 :</string>
    <string name="tv_feedback_content">您需要什么样的帮助或建议，都可以告诉我们哦！</string>
    <string name="ed_feedback_content_hint">感谢您的参与和对谛听的支持！</string>
    <string name="tv_feedback_contact">您的联系方式(选填)</string>
    <string name="ed_feedback_contact_hint">留下您的联系方式，便于我们及时回复您。</string>
    <string name="tv_balance">账户余额:</string>
    <string name="tv_point">点</string>
    <string name="tv_balance_info">1.点数可以用来购买北京谛听机器人科技有限公司的所有服务。\n 2.点数仅能用于北京谛听机器人科技有限公司直接运营的产品和服务，不能兑换成现金，不能进行转账交易，不能用于北京谛听机器人科技有限公司体系外的产品和服务。\n 3.点数充值业务不支持退货服务。\n 4.手机端暂不支持充值业务，如需充值请访问PC端官网</string>
    <string name="my_mail">站内消息</string>
    <string name="tv_no_fans">您还没有粉丝，快去宣传下你的机器人吧!</string>
    <string name="tv_nearby_no">您的附近没有机器人，换个地方试试吧！</string>
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="toolong">录音时间过长</string>
    <string name="register_and_login">注册并登录</string>
    <string name="tv_balance_prince">充值点数 : 1点=0.02元</string>
    <string name="tv_robot_profile">机器人个性</string>
    <string name="tv_robot_welcome">主人动态</string>
    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="four">4.</string>
    <string name="tv_balance_info1">点数可以用来购买北京谛听机器人科技有限公司的所有服务。</string>
    <string name="tv_balance_info2">点数仅能用于北京谛听机器人科技有限公司直接运营的产品和服务，不能兑换成现金，不能进行转账交易，不能用于北京谛听机器人科技有限公司体系外的产品和服务。</string>
    <string name="tv_balance_info3">点数充值业务不支持退货服务。</string>
    <string name="tv_balance_info4">手机端暂不支持充值业务，如需充值请访问PC端官网。</string>
    <string name="commit">提交</string>
    <string name="hint_profile">给自己的机器人来一个简单的自我介绍吧！</string>
    <string name="hint_welcome">分享一下机器人的最新动态吧！</string>
    <string name="tv_edit">编辑</string>
    <string name="tv_delete">删除</string>
    <string name="question_hint_role">问题不超过60个字</string>
    <string name="answer_hint_role">答案不超过240个字</string>
    <string name="no_voice">您并没有说话</string>
    <string name="sort_by_value">价值排序</string>
    <string name="sort_by_fans">粉丝排序</string>
    <string name="sort_by_question">问答排序</string>
    <string name="confirm_and_login">确定并重新登录</string>
    <string name="et_hint_caicai">在这里输入一段知识（百科知识），然后点击下面的提交按钮。我们的人工智能算法AI会自动把您输入的内容拆分成无数条机器人的知识。</string>
    <string name="tv_my_info">允许其它平行人用户获取我的账号信息</string>
    <string name="tv_phone_contact">手机通讯录匹配</string>
    <string name="app_list">应用列表</string>
    <string name="tv_secrecy">呼入设置</string>
    <string name="tv_user_manage">访客管理</string>
    <string name="tv_invalid_question">未知问题</string>
    <string name="tv_set_success">设置成功</string>
    <string name="tv_remind_check">查看我的提醒 ></string>
    <string name="tv_qrcode">推广机器人</string>
    <string name="tv_promotion">推广机器人</string>
    <string name="tv_general">通用</string>
    <string name="tv_welcome_hint">您还没有写动态，点击添加</string>
    <string name="tv_person">谁请客</string>
    <string name="tv_food">吃什么</string>
    <string name="remarks">"备注"</string>
    <string name="title_skinning">"换肤"</string>
    <string name="title_treasure_chest">"百宝箱"</string>
    <string name="title_general">"通用"</string>
    <string name="rank_item_host">"主人: "</string>
    <string name="rank_item_value">价值:  ¥ </string>
    <string name="rank_item_fans">"粉丝数:  "</string>
    <string name="rank_item_style">"机器人个性"</string>
    <string name="general_authority">"权限设置"</string>
    <string name="general_visitors">"访客管理"</string>
    <string name="general_call_logs">"通话记录"</string>
    <string name="general_update_pass">"修改密码"</string>
    <string name="general_font_size">"字体大小"</string>
    <string name="general_mail">"站内消息"</string>
    <string name="general_feedback">"意见反馈"</string>
    <string name="general_update_version">"版本更新"</string>
    <string name="general_logout">"退出"</string>
    <string name="using">"正在使用"</string>
    <string name="skin_default">"默认皮肤"</string>
    <string name="skin_one">"科学技术"</string>
    <string name="skin_two">"室内家具"</string>
    <string name="skin_three">"商务办公"</string>
    <string name="skin_four">"文化教育"</string>
    <string name="skin_five">"自然风景"</string>
    <string name="skin_six">"动物世界"</string>
    <string name="bind_third">其他登录方式</string>
    <string name="visitors">"访客管理"</string>
    <string name="mail">"站内消息"</string>
    <string name="private_message">"私信"</string>
    <string name="turned">"变身"</string>
    <string name="call">"呼叫"</string>
    <string name="find">"查找"</string>
    <string name="i_have_learned">"我已了解"</string>
    <string name="scenes">"场景: "</string>
    <string name="annex">"附件: "</string>
    <string name="add_common_language">"添加到常用语"</string>
    <string name="robot_manage">"机器人设置"</string>
    <string name="create_robot">"创建机器人"</string>
    <string name="update_head_image">"主人头像"</string>
    <string name="add_head_image">"添加头像"</string>
    <string name="sex">"性别"</string>
    <string name="male">"男"</string>
    <string name="female">"女"</string>
    <string name="birthday">"生日"</string>
    <string name="robot_name">"机器人名称:"</string>
    <string name="industry">"所属行业"</string>
    <string name="industry_level">"行业等级"</string>
    <string name="industry_level_select">"请选择行业等级"</string>
    <string name="price">"价值"</string>
    <string name="industry_select">"请选择行业"</string>
    <string name="general_function">"通用功能"</string>
    <string name="complete">"完成"</string>
    <string name="setting">"通用设置"</string>
    <string name="child_robot">"子机器人"</string>
    <string name="press_and_hold">"按住 说话"</string>
    <string name="search">"搜索"</string>
    <string name="communicate_with_robot">"与<xliff:g id="num">%1$s</xliff:g>沟通"</string>
    <string name="tv_no_robot">"没有搜索到要查找的机器人"</string>
    <string name="tv_chose_birthday">"请选择生日"</string>
    <string name="tv_official_price">"官方价"</string>
    <string name="tv_customize_price">"自定义"</string>
    <string name="tv_price">"￥ <xliff:g id="price">%1$s</xliff:g>"</string>
    <string name="pay_now">"立即支付"</string>
    <string name="instant_ownership">"即刻拥有: "</string>
    <string name="rationale_ask_again">"没有请求的权限, 此应用程序可能无法正常工作. 打开应用程序设置屏幕以修改应用程序权限."</string>
    <string name="title_settings_dialog">"需要权限"</string>
    <string name="rationale_photo">"平行人需要访问你的相册, 所以需要存储权限."</string>
    <string name="rationale_audio">"平行人需要访问你的音乐资源, 所以需要开启存储权限."</string>
    <string name="rationale_file">"平行人需要访问你的文件资源, 所以需要开启存储权限."</string>
    <string name="rationale_camera">"平行人需要访问你的相机, 所以需要开启相机权限."</string>
    <string name="rationale_record_audio">"平行人需要进行录音, 所以需要开启录音权限."</string>
    <string name="rationale_location">"平行人需要定位当前位置, 所以需要开启位置权限."</string>
    <string name="rationale_calendar">"平行人需要访问你的日历, 所以需要开启日历权限."</string>
    <string name="rationale_camera_and_storage">"平行人需要访问你的相机及存储文件, 所以需要相机和存储权限."</string>
    <string name="tab_chatting">"正聊"</string>
    <string name="tab_communication">"沟通"</string>
    <string name="tab_home">""</string>
    <string name="tab_home_title">"无处不在 无限互联"</string>
    <string name="tab_knowledge">"小编"</string>
    <string name="tab_mine">"我的"</string>
    <string name="chat">"与TA对话"</string>
    <string name="tv_select_birthday">"选择生日"</string>
    <string name="tv_price_tip">"每次点赞增加1元\n每次被变身增加1元\n知识库增加一条1元\n增加一位粉丝1元\n发展一个代理商3千\n会员在此基础上增加0.5%"</string>
    <string name="tv_price_transaction_title">"价格及交易须知"</string>
    <string name="tv_price_tipStr">"注自定义价格低于官方报价20%禁止交易,所有交易请前往机器人交易大厅,交易完成平台收取20%手续费"</string>
    <string name="add_knowledge">"添加知识"</string>
    <string name="edit_knowledge">"编辑知识"</string>
    <string name="tip_question">"输入问题的内容不能超过100个字"</string>
    <string name="text_send">"发送"</string>
    <string name="text_common_language">"常用语"</string>
    <string name="text_feedback_tip">注：问题反馈QQ号：2477184562</string>
    <string name="unknown_tip">暂无未知问题</string>
    <string name="cancle_follow_success">取消关注成功</string>
    <string name="cancle_follow_fail">取消关注失败</string>
    <string name="add_follow_success">添加关注成功</string>
    <string name="add_follow_fail">添加关注失败</string>
    <string name="robot_pair">速配</string>
    <string name="robot_detail_title">详细资料</string>
    <string name="no_system_date">暂无系统消息</string>
    <string name="no_personal_date">还没有私信，快告诉朋友们，可以偷偷给你发私信哦！</string>
    <string name="no_usermessage_date">这么有趣的你，竟然还没人访问，快快分享机器人增加人气吧！</string>
    <string name="everyone_can_see">"默认所有人可见"</string>
    <string name="only_yourself_can_see">"默认仅自己可见"</string>
    <string name="tv_confirm">"确认"</string>
    <string name="tv_cancel">"取消"</string>
    <string name="tv_edit_content">"编辑内容"</string>
    <string name="regiest_agreemrnt">点击注册并登录,即表示阅读并同意</string>
    <string name="regiest_agreemrnt_name">《谛听机器人用户协议》</string>
    <string name="add_to_the_knowledge_base">"去内容库添加"</string>
    <string name="universal_answer1">万能答案1：</string>
    <string name="comprehensive">综合</string>
    <string name="nation_in">国内</string>
    <string name="international">国际</string>
    <string name="sociology">社会</string>
    <string name="advertisement">广告软文</string>
    <string name="title_party">标题党</string>
    <string name="poor_content_quality">内容质量差</string>
    <string name="vulgar_pornography">低俗色情</string>
    <string name="other">其他</string>
    <string name="please_input_other_cause">其他原因</string>
    <string name="click_input_title">点击此处设置标题</string>
    <string name="update_title_tips">"修改标题"</string>
</resources>