<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorGray"
              android:orientation="vertical">

    <com.diting.pingxingren.custom.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.diting.pingxingren.custom.TitleBarView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dp"
        android:layout_marginTop="@dimen/dimen_1_dp"
        android:background="@color/colorWhite"
        android:paddingLeft="@dimen/dimen_10_dp"
        android:paddingTop="@dimen/dimen_10_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_balance"
            android:textColor="@color/color_text_title"
            android:textSize="@dimen/text_size_16"/>

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10_dp"
            android:text="5000"
            android:textColor="@color/color_light_green"
            android:textSize="@dimen/text_size_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5_dp"
            android:text="@string/tv_point"
            android:textColor="@color/color_text_title"
            android:textSize="@dimen/text_size_16"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dp"
        android:background="@color/colorGray"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_10_dp"
        android:text="@string/tv_balance_prince"
        android:textColor="@color/color_text_title"
        android:textSize="@dimen/text_size_16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_15_dp"
        android:paddingLeft="@dimen/dimen_10_dp"
        android:paddingRight="@dimen/dimen_20_dp"
        android:paddingTop="@dimen/dimen_15_dp"
        android:textColor="@color/color_text_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_balance_info1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_balance_info2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_balance_info3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_balance_info4"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>