<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popupwin_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50_dp"
            android:gravity="center"
            android:text="@string/update_title_tips"
            android:textColor="@color/color_text_nomal"
            android:textSize="@dimen/text_size_18"/>

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/click_input_title"
            android:maxLines="1"
            android:paddingBottom="@dimen/dimen_20_dp"
            android:paddingLeft="@dimen/dimen_10_dp"
            android:paddingRight="@dimen/dimen_10_dp"
            android:paddingTop="@dimen/dimen_20_dp"
            android:singleLine="true"
            android:textColor="@color/color_text_nomal"
            android:textColorHint="@color/color_text_deep"
            android:textSize="@dimen/text_size_18"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_enter"
                android:layout_width="@dimen/dimen_0_dp"
                android:layout_height="@dimen/dimen_40_dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/submit"
                android:textColor="@color/commonColor"
                android:textSize="@dimen/text_size_16"/>

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="@dimen/dimen_0_dp"
                android:layout_height="@dimen/dimen_40_dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/tv_cancel"
                android:textColor="@color/color_text_light"
                android:textSize="@dimen/text_size_16"/>
        </LinearLayout>
    </LinearLayout>
</layout>