<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorGray"
              android:orientation="vertical">

    <com.diting.pingxingren.custom.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.diting.pingxingren.custom.TitleBarView>

    <LinearLayout
        style="@style/rl_login"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.diting.pingxingren.custom.ClearEditText
                android:id="@+id/et_verify_code"
                style="@style/et_user_info"
                android:layout_width="@dimen/dimen_0_dp"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/icon_verifycode"
                android:hint="@string/verifycode_input"
                android:inputType="number"
                android:maxLength="4"
                android:paddingRight="@dimen/dimen_5_dp"/>

            <Button
                android:id="@+id/btn_send_message"
                style="@style/btn_send_message"/>
        </LinearLayout>

        <View
            style="@style/devide_line"/>

        <com.diting.pingxingren.custom.ClearEditText
            android:id="@+id/et_new_password"
            style="@style/et_user_info"
            android:drawableLeft="@mipmap/icon_password"
            android:hint="@string/et_password_hint"
            android:inputType="textPassword"/>

        <View
            style="@style/devide_line"/>

        <com.diting.pingxingren.custom.ClearEditText
            android:id="@+id/et_confirm_password"
            style="@style/et_user_info"
            android:drawableLeft="@mipmap/icon_password"
            android:hint="@string/tv_confirm_password"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/btn_login"
        android:layout_marginTop="60dp"
        android:text="@string/confirm_and_login"/>
</LinearLayout>
